tests/input/conf/invalid/invalid4.cnf
[server]
ip = 127.0.0.1
port = 53

[zone]
name = abc
path = noexist.zone
